@@ -50,7 +50,10 @@ Removed checkers
 
 Extensions
 ==========
+* Added optional extension ``for-any-all``: Emitted when a ``for`` loop only iterates
+  over a list to produce a boolean and could be replaced by any/all called on a list comprehension
 
+  Closes #5008
 
 Other Changes
 =============
